# doc-conversion-service

./: .cursorrules  .dockerignore  .env  .gitignore  =0.5.8  ARCHITECTURE.md  ARCHITECTURE_SIMPLE.md  Dockerfile  Makefile  README.md  README_zh.md  architecture_diagram.txt  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  models.py  routes.py
app/config/: __init__.py  settings.py
app/converters/: __init__.py  cross_type_converter.py  document_to_image_converter.py  image_converter.py  libreoffice_converter.py  markdown_converter.py  pdf_converter.py
app/services/: __init__.py  conversion.py  validation.py
app/utils/: __init__.py  file_utils.py
